fix horizontal overflow on home view

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,7 @@
 }
 
 .body{
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 .homeWrapper {
